WebAPI_Pure/App/css/angularjsStyle.css
.ma-has-error-border {
    border: red 2px solid !important;
}

/*--NEW--*/
.rt-btnMid {
    padding: 0 .125em;
}
.rt-btnMid-right {
    padding-right: .125em;
}

.rt-btnCreate {
    padding: 0;
    margin-right: .25em;
}

.rt-btnLogOut {
    background-color: dimgrey;
    color: orange;
}
.rt-btnLogOut:hover {
    background-color: rgb(80, 80, 80);
    color: orange;
}

.rt-btn-roundCorner {
    padding: 1em 0;
    border-radius: 2em;
}

.rt-btn-roundCorner-left {
    padding: 1em 0;
    border-radius: 2em 0 0 2em;
    width: 100%;
}

.rt-btn-roundCorner-right {
    padding: 1em 0;
    border-radius: 0 2em 2em 0;
    width: 100%;
}

.rt-btn-noRoundCorner {
    padding: 1em 0;
}

.rt-userHeight {
    height: auto;
}

.rt-main {
    margin: 4em 0 0 0;
}

.rt-formWrap {
    width: 21em;
    margin: 0 auto;
}

.rt-infoMain {
    margin: 3.2em 0 0 0;
}

.rt-infoTxt {
    font-size: 1.375em;
}

.rt-infoTxt span {
    font-weight: 900;
    font-style: normal;
}

.rt-footerLogoImg {
    padding: 0 .25em;
}

.rt-deviceShow {
    display: block;
}
.rt-deviceHidden {
    display: none;
}
.rt-deviceShow-inline {
    display: inline-block;
}
.rt-deviceHidden-inline {
    display: none;
}

.rt-onlyForPrint {
    display: none;
}

.rt-mobileMode {
    font-weight: bold;
    font-size: 9pt;
}

.rt-table-width-10 {
    width: 10%;
}

.rt-table-width-15 {
    width: 15%;
}

.rt-table-width-20 {
    width: 20%;
}

.rt-btn-fix {
    width: 100%;
    border-radius: 0;
}

.rt-infoFrame {
    width: auto;
    max-width: 41em;
    margin: 0 auto;
    padding: 1em;
    border: solid 4px black;
    border-radius: 1.5em;
}

.rt-info-header {
    position: relative;
    top: -1.4em;
    left: .5em;
    max-width: 10em;
    background-color: white;
    font-size: 18pt;
    font-weight: bold;
    padding: 0 0 0 1em;
    margin: 0;
}

.rt-modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, .50);
}

.rt-modal-content {
    background-color: white;
    margin: 6em auto;
    padding: 0;
    width: 31em;
}

.rt-modal-header {
    width: 100%;
    background-color: rgba(0, 0, 0 , .75);
    font-size: 24pt;
    font-weight: bold;
    padding: .25em;
    color: orange;
}

.rt-modal-body {
    width: 100%;
    padding: .5em;
}

.rt-infoBtn {
    font-size: 12pt;
    display: inline-block;
    padding: 1em 2em;
    cursor: pointer;
    width: 12em;
}

.rt-infoBtn-default {
    background-color: rgb(73, 150, 222);
    color: white;
}
.rt-infoBtn-default:hover {
    background-color: rgb(73, 150, 222);
    color: black;
    text-decoration: none;
}

.rt-orMargin {
    margin: 0 1em;
}

.rt-xModal a {
    font-size: 24pt;
    color: lightgray;
    cursor: pointer;
    float: right;
}
.rt-xModal:hover {
    font-size: 24pt;
    color: darkgrey;
}
.rt-xModal:hover a {
    font-size: 24pt;
    color: darkgrey;
    text-decoration: none;
    list-style: none;
}

.rt-userPanel {
    margin-right: 1em;
    width: 25em;
}

.rt-userRepeat {
    margin-top: 1em;
    display: inline-block;
    vertical-align: top;
}

/*==================================================
=            Bootstrap 3 Media Queries             =
==================================================*/

/*==========  Non-Mobile First Method  ==========*/

/* Large Devices, Wide Screens */
@media only screen and (max-width : 1200px) {
}

/* Medium Devices, Desktops */
@media only screen and (max-width : 992px) {
    .rt-deviceShow {
        display: none;
    }

    .rt-deviceHidden {
        display: block;
    }

    .rt-deviceShow-inline {
        display: none;
    }

    .rt-deviceHidden-inline {
        display: inline-block;
    }

    .rt-userPanel {
        margin-right: 1em;
        width: 20em;
    }
}

/* Small Devices, Tablets */
@media only screen and (max-width : 768px) {
    .rt-btn-roundCorner-left {
        padding: 1em 0;
        border-radius: 0;
        width: 100%;
    }

    .rt-btn-roundCorner-right {
        padding: 1em 0;
        border-radius: 0;
        width: 100%;
    }

    .rt-btnMid {
        padding: 0;
    }
    .rt-btnMid-right {
        padding-right: 0;
    }

    .rt-btnCreate {
        padding: 0;
        margin-right: 0;
    }
}

/* Extra Small Devices, Phones */
@media only screen and (max-width : 480px) {
    .rt-modal-content {
        background-color: white;
        margin: 6em auto;
        padding: 0;
        width: 100%;
    }

    .rt-infoBtn {
        font-size: 12pt;
        display: block;
        padding: 1em 2em;
        cursor: pointer;
        min-width: 100%;
    }

    .rt-userPanel {
        margin-right: 1em;
        width: 100%;
    }

    .rt-userRepeat {
        margin-top: 1em;
        display: inline;
        vertical-align: top;
    }
}

/* Custom, iPhone Retina */
@media only screen and (max-width : 320px) {
    .rt-infoFrame {
        width: auto;
        max-width: 41em;
        margin: 0 auto;
        padding: 1em;
        border: solid 4px black;
    }
}

